<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    android:layout_margin="25dp"
    android:padding="10dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:elevation="5dp"
    app:cardCornerRadius="10dp">

    <TextView
        android:id="@+id/sensorAccuracyTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/compass_acuracy_title"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sensorAccuracyDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/compass_calibration_description"
        app:layout_constraintTop_toBottomOf="@+id/sensorAccuracyTitleTextView"/>

    <ImageView
        android:id="@+id/sensorAccuracyDescriptionImageView"
        android:layout_width="100dp"
        android:layout_height="180dp"
        android:scaleType="centerCrop"
        android:layout_marginTop="20dp"
        android:src="@mipmap/ic_compass_calibration"
        app:layout_constraintTop_toBottomOf="@+id/sensorAccuracyDescriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sensorAccuracyStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/accuracy_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorAccuracyDescriptionImageView"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialogCoordinatesAcceptButton"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:text="@string/calibration_end"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/sensorAccuracyStateTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>